netware/mysqld_safe.c
@@ -189,7 +189,7 @@ void start_defaults(int argc, char *argv[])
   snprintf(address, PATH_MAX, "0.0.0.0");
 
   // port
-  snprintf(port, PATH_MAX, "3306");
+  snprintf(port, PATH_MAX, "%d", MYSQL_PORT);
 
   // default option
   default_option[0]= NULL;
